deploy/vault/traefik-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vault.silkrode.in`) && Path(`/ui`)
      kind: Rule
      services:
      - name: vault-ui
        port: 8200
    - match: Host(`vault.silkrode.in`)
      kind: Rule
      services:
      - name: vault
        port: 8200
    - match: Host(`testvault.silkrode.com.tw`)
      kind: Rule
      services:
      - name: vault
        port: 8200
